# pp-tree-importer2

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  deny.toml
.circleci/: config.yml
.github/workflows/: doc.yaml  docker.yaml  docker.yml  rust.yml
fixtures/: IMG_0406.HEIC
src/: config.rs  error.rs  http.rs  macros.rs  main.rs  metadata.rs  panic.rs
src/converter/: general.rs  heif.rs  mod.rs
src/image_source/: gdrive.rs  mod.rs
src/output/: gcs.rs  mod.rs
