[package]
name = "pp-tree-importer"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
bytes = "1.9.0"
futures = { version = "0.3.31", default-features = false, features = ["std", "async-await"] }
geojson = "0.24.1"
google-apis-common = { version = "7.0.0", features = ["yup-oauth2"] }
google-drive3 = "6.0.0"
google-storage1 = "6.0.0"
http-body-util = "0.1.2"
hyper = { version = "1.5.2", features = ["http1", "http2", "client"] }
hyper-rustls = { version = "0.27.5", default-features = false, features = ["http1", "http2", "logging", "ring", "rustls-platform-verifier", "tls12"] }
hyper-util = { version = "0.1.10", features = ["client", "tokio"] }
image = "0.25.5"
kamadak-exif = "0.6.1"
libheif-rs = "1.0.2"
md5 = "0.7.0"
mime = "0.3.17"
num_cpus = "1.16.0"
peak_alloc = "0.2.1"
serde_json = "1.0.137"
thiserror = "2.0.11"
time = { version = "0.3.37", features = ["parsing", "macros", "formatting"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros", "sync"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tracing = { version = "0.1.41", features = ["valuable"] }
tracing-panic = "0.1.2"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json", "valuable"] }
unwrap-infallible = "0.1.5"
valuable = { version = "0.1.1", features = ["derive"] }
webp = "0.3.0"
yup-oauth2 = "11.0.0"

[dev-dependencies]
approx = "0.5.1"

# Speed up debug builds
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.webp]
opt-level = 3
[profile.dev.package.libwebp-sys]
opt-level = 3
[profile.dev.package.zune-jpeg]
opt-level = 3

# Speed up tests
[profile.test.package.image]
opt-level = 3
[profile.test.package.webp]
opt-level = 3
[profile.test.package.libwebp-sys]
opt-level = 3
[profile.test.package.zune-jpeg]
opt-level = 3
